--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,7 +4,7 @@
     "name": "Year in Pixels",
     "scope": "/",
     "display": "standalone",
-    "start_url": "https://year-in-pixels.glitch.me/",
+    "start_url": "https://year-in-pixels.jeroenpeters.dev/",
     "short_name": "Year in Pixels",
     "theme_color": "#ffffff",
     "description": "Small tool to keep track of your mood during all year using pixels.",
@@ -13,7 +13,7 @@
     "prefer_related_applications": false,
     "icons": [
         {
-            "src": "https://cdn.glitch.com/86c99ebe-0198-4c6e-8de1-c4e515e04792%2Ffavicon.png?1546264249921",
+            "src": "https://year-in-pixels.jeroenpeters.dev/favicon.ico",
             "type": "image/png",
             "sizes": "512x512"
         }
