--- a/.ddev/config.yaml
+++ b/.ddev/config.yaml
@@ -1,6 +1,6 @@
 name: year-in-pixels
 type: php
-docroot: ""
+docroot: "public"
 php_version: "8.1"
 webserver_type: nginx-fpm
 xdebug_enabled: false
