--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "year-in-pixels",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "Small tool to keep track of your mood during all year using pixels.",
   "main": "server.js",
   "scripts": {
@@ -15,6 +15,7 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18",
+    "fs": "^0.0.1-security",
     "jade": "^1.11.0"
   },
   "engines": {
